@@ -8,6 +8,7 @@ Version 2.4.0 -> 2.4.1
  - fixed bug in PythonQueryParser overriding wrong method (Aaron Lav)
  - PyLucene built with JCC 2.2
  - fixed bug with collections.py shadowing Python 2.6's during build
+ - passing strings for byte[] or char[] is no longer supported, use JArray
 
 Version 2.3.2 -> 2.4.0
 ----------------------
